--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
     <div class="right">
         <h2>Hi, I'm Anit</h2>
         <h1>WEB <span>DEVELOPER</span></h1>
-        <button>Download CV</button>
+        <p>Excited to explore coding in deapth.</p>
+        <button class="btn1">Download CV</button>
         <div class="right-social">
             <a href="https://github.com/anit10stha" target="_blank"><i class="fa-brands fa-github"></i></a>
             <a href="https://www.linkedin.com/in/anit-shrestha-b27896305/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
@@ -44,10 +45,33 @@
             <a href="https://x.com/AnitShrestha01"><i class="fa-brands fa-square-x-twitter" target="_blank"></i></a>
         </div>
     </div>
-
+</div>
 </div>
 <!-- hero section starts -->
 
+<!-- about section starts -->
+ <div class="res"> <!-- for making responsive, margin to button-->
+<div class="container">
+    <div class="container-txt">
+        <h1>So, Who Am I?</h1>
+        <div id="about"></div>
+        <p>I'm Anit Shrestha a passionate CSIT student at Texas International College. With a strong enthusiasm for coding and web development, I'm constantly exploring new ways to create innovative solutions.
+            This portfolio showcases my projects and experiences, highlighting my skills and dedication to the
+            field.
+            If you have any query then don't hesitate to contact me. Take a look around and let's connect!
+        </p>
+    </div>
+    <div class="coder"><img src="https://i.pinimg.com/originals/81/17/8b/81178b47a8598f0c81c4799f2cdd4057.gif" alt="about"></div>
 </div>
+
+<button class="btn2">Contact Me</button>
+</div>
+<!-- about section ends -->
+
+
+<!-- skill section starts -->
+
+
+<!-- skill section ends -->
 </body>
 </html>
