--- a/index.html
+++ b/index.html
@@ -70,8 +70,30 @@
 
 
 <!-- skill section starts -->
+<div class="skill-header">Skills</div>
+<div class="skill">
+    <div id="skills"></div>
+    <div class="box1">
+      <h1 class="heading">Frontend Development</h1>
+      <p class="paragraph">Proficient in building responsive and interactive web applications using HTML5, CSS3, and JavaScript.</p>
+    </div>
 
+    <div class="box2">
+        <h1 class="heading">UI/UX</h1>
+        <p class="paragraph">Knowledge of user experience (UX) principles and user interface (UI) design, with the ability to create visually appealing and intuitive interfaces.</p>
+    </div>
 
+    <div class="box3">
+        <h1 class="heading">Backend Development</h1>
+        <p class="paragraph">Proficient in building server-side applications using Node.js, Express, and MongoDB.</p>
+    </div>
+</div>
 <!-- skill section ends -->
+
+<!-- footer section starts -->
+<footer>
+    <p><marquee>Copyright &copy; 2023 Anit Shrestha. All Rights Reserved</marquee></p>
+</footer>
+<!-- footer section ends -->
 </body>
 </html>
