--- a/index.html
+++ b/index.html
@@ -92,6 +92,19 @@
 </div>
 <!-- skill section ends -->
 
+
+<!-- projects section starts -->
+<div id="pj-heading">Frontend Projects</div>
+<div class="project">
+    <div class="project-1"></div>
+    <div class="project-2"></div>
+    <div class="project-3"></div>
+    <div class="project-4"></div>
+</div>
+
+
+<!-- projects section ends -->
+
 <!-- footer section starts -->
 <footer>
     <p><marquee>Copyright &copy; 2023 Anit Shrestha. All Rights Reserved</marquee></p>
