--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
     </div>
 
     <div class="right">
+        <div class="circle"></div>
         <h2>Hi, I'm Anit</h2>
         <h1>WEB <span>DEVELOPER</span></h1>
         <p>Excited to explore coding in deapth.</p>
@@ -93,17 +94,6 @@
 <!-- skill section ends -->
 
 
-<!-- projects section starts -->
-<div id="pj-heading">Frontend Projects</div>
-<div class="project">
-    <div class="project-1"></div>
-    <div class="project-2"></div>
-    <div class="project-3"></div>
-    <div class="project-4"></div>
-</div>
-
-
-<!-- projects section ends -->
 
 <!-- footer section starts -->
 <footer>
